--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "hoi4ModUtilities.modFile": "c:\\Users\\deaco\\Documents\\GitHub\\TheEuropanChronicles\\descriptor.mod"
+    "hoi4ModUtilities.modFile": "c:\\Users\\deaco\\Documents\\GitHub\\TheEuropanChronicles\\descriptor.mod",
+    "cwtools.rules_version": "manual",
+    "cwtools.rules_folder": "C:\\Users\\deaco\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\Europa Burns\\RESOURCES\\cwtools-hoi4-config-0.0.3"
 }
